fix(test): правки по консилиуму — гейты под тестами, второй сигнал стал гейтом, вложенность в инвентаре
Раунд 1 ревьюеров (java-lead / maintainer / qa-lead), доведение до нуля находок.
Три ревью независимо сошлись на одном и том же — сигнал №2 не роняет сборку,
-Dtest гоняет тест дважды, инвентарь слеп к вложенности и пустым вложениям.

СЧЁТЧИК СБОЕВ СТАЛ ГЕЙТОМ (major у java-lead и qa-lead):
раньше failureCount() читал только собственный юнит-тест — 30 сорванных трансформаций
после апгрейда давали бы ЗЕЛЁНУЮ сборку и пять строк WARNING в логе. Теперь SPI-листенер
JUnit Platform выгружает диагностику в target/instrumentation-diagnostics.txt в конце
основного прогона, а инвентарь (вторая JVM) читает её и падает. Синтетический сбой
негативного теста и чужой шум Mockito отфильтрованы поимённо, с обоснованием.

И ОН СРАЗУ НАШЁЛ РЕАЛЬНЫЙ БАГ (до всякого апгрейда): матчер AssertJ ловил и КОНСТРУКТОРЫ,
ByteBuddy их обернуть не может («Cannot catch exception during constructor call») →
трансформация типа падала целиком, и ObjectAssert/ListAssert/FloatAssert и др. оставались
БЕЗ перехвата — их собственные проверки молча не попадали в отчёт. Сбои уходили в
Listener.NoOp, поэтому никто не знал. Добавлен not(isConstructor()): 117 трансформаций,
сбоев по своим типам — ноль.

ГАРД ByteBuddy ВЫНЕСЕН ИЗ ИНСТРУМЕНТИРУЕМОГО КЛАССА (major java-lead, пред-существующий баг):
AllureInstrumentation.available() не работал без byte-buddy — класс упоминает его типы в теле
retransform, а линкуется класс ЦЕЛИКОМ, поэтому «безопасный» гард падал NoClassDefFoundError
до входа в метод. Девять листенеров получали бы у потребителя падение вместо мягкой
деградации. Новый ByteBuddyPresence (ноль ссылок на byte-buddy) + регресс-тест на настоящем
URLClassLoader без библиотеки; старый метод @Deprecated с объяснением.

ГЕЙТЫ ДЕТЕКТОРА ПОД ТЕСТАМИ (major maintainer): решение вынесено в чистые
ReportInventory.verdict/updateVerdict, ReportInventoryCheck стал шеллом «посчитать →
показать → упасть». Сломанный